Update jUnit and Mockito tests